FIX-image on mobile

--- a/integration/assets/sass/components/pages/_home.scss
+++ b/integration/assets/sass/components/pages/_home.scss
@@ -14,6 +14,7 @@ body{
             background-size: contain;
             background-position: center;
             width: 100%;
+            height: 20em;
             @include respond-to('desktop'){
                 background-image: url("../images/image-hero-desktop.png");
                 height: 45em;
